--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css';
 const pageTitle = "About Me";
 
 const identity = {
@@ -26,7 +27,6 @@ const textCase = "uppercase";
     <style define:vars={{skillColor, fontWeight, textCase}}>
       h1 {
         color:  purple;
-        font-size: 4rem;
       }
       .skill {
         color: var(--skillColor);
