--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/global.css';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "About Me";
 
 const identity = {
@@ -25,9 +27,7 @@ const textCase = "uppercase";
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
     <style define:vars={{skillColor, fontWeight, textCase}}>
-      h1 {
-        color:  purple;
-      }
+      
       .skill {
         color: var(--skillColor);
         font-weight: var(--fontWeight);
@@ -36,9 +36,7 @@ const textCase = "uppercase";
     </style>
 	</head>
 	<body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header />
 		<h1>About</h1>
     <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
     <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
@@ -58,5 +56,10 @@ const textCase = "uppercase";
     {happy && <p>I am happy to be learning Astro!</p>}
     {finished && <p>I finished this tutorial!</p>}
     {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+
+    <Footer/>
+    <script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
