--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -19,6 +19,6 @@ const { posts } = Astro.props;
 <BaseLayout pageTitle={tag}>
   <p>Posts tagged with {tag}</p>
   <ul>
-    {posts.map(post => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    {posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
 </BaseLayout>
