--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,6 +1,10 @@
 ---
-import BaseLayout from "./BaseLayout.astro";
-const {frontmatter: {title, pubDate, description, author, postImage, tags}} = Astro.props;
+import BaseLayout from "../../layouts/BaseLayout.astro";
+const pageTitle = "Tag Index";
+const allPosts = await Astro.glob('../posts/*.md');
+
+const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+
 ---
 <style>
   a {
@@ -20,11 +24,6 @@ const {frontmatter: {title, pubDate, description, author, postImage, tags}} = As
     background-color: #f8fcfd;
   }
 </style>
-<BaseLayout pageTitle={title}>
-  <p>Published on: {pubDate.slice(0,10)}</p>
-  <p><em>{description}</em></p>
-  <p>Written by {author}</p>
-  <img src={postImage}/>
+<BaseLayout pageTitle={pageTitle}>
   <div class="tags">{tags.map((tag) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)}</div>
-  <slot/>
 </BaseLayout>
