--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -24,6 +24,7 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
     background-color: #f8fcfd;
   }
 </style>
+
 <BaseLayout pageTitle={pageTitle}>
-  <div class="tags">{tags.map((tag) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)}</div>
+  <!-- <div class="tags">{tags.map((tag) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)}</div> -->
 </BaseLayout>
