--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,12 +1,12 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
 const pageTitle = "Tag Index";
-// const allPosts = await Astro.glob('../posts/*.md');
+const allPosts = await Astro.glob('../posts/*.md');
 
-// const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 
 ---
-<!-- <style>
+<style>
   a {
     color: #00539F;
   }
@@ -23,8 +23,8 @@ const pageTitle = "Tag Index";
     font-size: 1.15em;
     background-color: #f8fcfd;
   }
-</style> -->
+</style>
 
 <BaseLayout pageTitle={pageTitle}>
-  <!-- <div class="tags">{tags.map((tag) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)}</div> -->
+  <div class="tags">{tags.map((tag) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)}</div>
 </BaseLayout>
