--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,13 @@ body {
   padding: 1rem;
   line-height: 1.5;
 }
+.dark body {
+  background-color: #0d0950;
+  color: #fff;
+}
+.dark .nav-links a {
+  color: #fff;
+}
 
 * {
   box-sizing: border-box;
